src/infra/argocd/components/atlantis/kustomize/namespace.yaml
# Namespace for Atlantis Terraform automation server and associated credentials.

apiVersion: v1
kind: Namespace
metadata:
  name: atlantis
  labels:
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/part-of: cluster-runtime
    cost-center: shared-infrastructure
    environment: production
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
